--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        model: [ N976N" ]
+        model: [ "N976N" ]
 
     steps:
       - uses: actions/checkout@v2
