--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
                        model=${{ matrix.model }} \
                        name="Cruel-5.3"        \
                        toolchain=$TOOLCHAIN      \
-                       +magisk=alpha                  \
+                       +magisk=27.0                 \
                        +nohardening              \
                        +nohardening2\
                        +ttl                      \
